@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1654 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1655 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -1213,3 +1213,4 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 		circuitry found in for example the Performa 6360.
 		[macallan 20120123]
 	dhcpcd(8): Import dhcpcd-5.5.0 [roy 20120125]
+	x86: Stop building boot ROM images for old NICs. [jnemeth 20120127]
